model updates, wait list working

--- a/model.ipynb
+++ b/model.ipynb
@@ -31,14 +31,12 @@
     "# inputs\n",
     "applicant_arrival = 0.03\n",
     "applicant_departure = 0.03\n",
-    "vacancy_rate = \n",
-    "\n",
-    "max_"
+    "vacancy_rate = \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,9 +85,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20513\n"
+     ]
+    }
+   ],
    "source": [
     "class Unit:\n",
     "    def __init__(self, capacity, occupied):\n",
@@ -106,12 +112,12 @@
     "    6: 569\n",
     "}\n",
     "\n",
-    "housing_units = [Unit(capacity, 0) for capacity in housing_units_stock]\n"
+    "housing_units = [Unit(capacity, 0) for capacity, count in housing_units_stock.items() for _ in range(count)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,28 +125,43 @@
     "\n",
     "periods = 1\n",
     "\n",
-    "for _ in periods:\n",
+    "for _ in range(periods):\n",
     "    if waitlist.shape[0] == 0:\n",
     "        break\n",
     "    \n",
     "    for index, applicant in waitlist.iterrows():\n",
     "\n",
     "        while applicant['ranking'] == 0:\n",
-    "\n",
     "            for rank in applicant['preferences']:\n",
     "                for unit in housing_units:\n",
     "                    if (unit.capacity == rank) and (unit.occupied == 0):\n",
     "                        unit.occupied = 1\n",
     "                        applicant['ranking'] = applicant['preferences'].index(rank) + 1\n",
-    "\n",
-    "                \n",
-    "        \n",
-    "\n",
-    "        \n",
-    "                \n",
-    "\n",
+    "                        break\n",
+    "            break\n",
     "    \n",
-    "    "
+    "        if applicant['ranking'] > 0:\n",
+    "            waitlist.drop(index)\n",
+    "                "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(104220, 11)\n",
+      "(104220, 11)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.shape)\n",
+    "print(waitlist.shape)"
    ]
   }
  ],
